BusOne/src/objects/Medical_Inquiry_Fulfillment_Response_vod__c.object
<CustomObject>
    <description>Captures the detailed responses used to fulfill the associated Medical Inquiry Fulfillment records.</description>
    <fields>
        <fullName>Assign_To_Comments_vod__c</fullName>
        <description>Used to record comments when reassigning a Medical Inquiry Fulfillment record.</description>
        <label>Assign To Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assign_To_User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to assign the associated Medical Inquiry Fulfillment record to a different User in order to complete the request. User list will be filtered to those Users who are assigned to the same territory as the Account on the Medical Inquiry record.</description>
        <label>Assign To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Medical_Inquiry_Fulfillment_Response_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_By_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User that completed the Medical Inquiry Fulfillment Response.</description>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Medical_Fulfillment_Resp_CompletedBy_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Datetime_vod__c</fullName>
        <description>The Date and Time that the Medical Inquiry Fulfillment Response was completed.</description>
        <label>Completed Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Materials_vod__c</fullName>
        <description>Used to capture the Fulfillment Materials used to respond to the Medical Inquiry request.</description>
        <label>Fulfillment Materials</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Response_vod__c</fullName>
        <description>Used to capture a description of the Fulfillment Response to the Medical Inquiry request.</description>
        <label>Fulfillment Response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interaction_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Interaction Report which was used to capture the Medical Inquiry Fulfillment Response.</description>
        <label>Interaction</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Medical Inquiry Fulfillment Responses</relationshipLabel>
        <relationshipName>Medical_Inquiry_Fulfillment_Response_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Inquiry_Fulfillment_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated Medical Inquiry Fulfillment record.</description>
        <label>Medical Inquiry Fulfillment</label>
        <referenceTo>Medical_Inquiry_Fulfillment_vod__c</referenceTo>
        <relationshipLabel>Medical Inquiry Fulfillment Responses</relationshipLabel>
        <relationshipName>Medical_Inquiry_Fulfillment_Response_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Method_vod__c</fullName>
        <description>The means by which the Medical Inquiry Fulfillment Response was delivered.</description>
        <label>Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Face_to_Face_vod</fullName>
                </value>
                <value>
                    <fullName>Phone_vod</fullName>
                </value>
                <value>
                    <fullName>Email_vod</fullName>
                </value>
                <value>
                    <fullName>Fax_vod</fullName>
                </value>
                <value>
                    <fullName>Mail_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Created_Datetime_vod__c</fullName>
        <description>Date and time the Medical Inquiry Fulfillment Response record was created on the mobile device.</description>
        <label>Mobile Created Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field to aid in synchronization and allow for the creation of Medical Inquiry Fulfillment records on the offline platforms.
Help Text</description>
        <externalId>true</externalId>
        <label>Mobile Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reassign_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate that the associated Medical Inquiry Fulfillment record requires an additional response for completion.</description>
        <label>Reassign?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>The state of the Medical Inquiry Fulfillment Response record. When a Medical Inquiry Fulfillment Response record has a status of Saved, the Edit option is displayed. When a Medical Inquiry Fulfillment Response record has a status of Completed, the Edit option is hidden.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New_vod</fullName>
                </value>
                <value>
                    <fullName>Saved_vod</fullName>
                </value>
                <value>
                    <fullName>Completed_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Medical Inquiry Fulfillment Response</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MIFR-{00000}</displayFormat>
        <label>Ml Fulfillment Response Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Inquiry Fulfillment Responses</pluralLabel>
    <recordTypes>
        <fullName>Assign_MIFR_vod</fullName>
        <active>false</active>
        <description>Medical Inquiry Fulfillment Response created when MIF is assigned using Assign Button.</description>
        <label>Assign_MIFR_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Medical_Inquiry_Fulfillment_Response_vod</fullName>
        <active>true</active>
        <description>Medical Inquiry Fulfillment Response created in relation to an associated Medical Inquiry Fulfillment record.</description>
        <label>Medical Inquiry Fulfillment Response</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>